syntax = "proto3";

package user;

option go_package = "pb/userpb";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  enum Status {
    SUCCESS = 0;
  }
  Status status = 1;
}

message RegisterRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message RegisterResponse {
  enum Status {
    SUCCESS = 0;
  }
  Status status = 1;
}
